--- a/topbotm.css
+++ b/topbotm.css
@@ -1,4 +1,4 @@
-#scrollBtn {
+#topBtn {
     display: none; /* Hidden by default */
     position: fixed; /* Fixed/sticky position */
     bottom: 20px; /* Place the button at the bottom of the page */
@@ -14,11 +14,11 @@
     font-size: 18px; /* Increase font size */
 }
 
-#scrollBtn:hover {
+#topBtn:hover {
     background-color: #555; /* Add a dark-grey background on hover */
 }
 
-#scrollBtn2 {
+#bottomBtn {
     display: none; /* Hidden by default */
     position: fixed; /* Fixed/sticky position */
     top: 20px; /* Place the button at the bottom of the page */
@@ -34,6 +34,6 @@
     font-size: 18px; /* Increase font size */
 }
 
-#scrollBtn2:hover {
+#bottomBtn:hover {
     background-color: #555; /* Add a dark-grey background on hover */
 }
