--- a/topbotm.css
+++ b/topbotm.css
@@ -19,7 +19,7 @@
 }
 
 #bottomBtn {
-    display: none; /* Hidden by default */
+    display: block; /* Hidden by default */
     position: fixed; /* Fixed/sticky position */
     top: 20px; /* Place the button at the bottom of the page */
     right: 30px; /* Place the button 30px from the right */
